# MSc_WI_BINA

./: .gitignore  Datananalyse_Test_Sarah_Fässler.ipynb  Datenanalyse_Teil 4_Selina.ipynb  Datenanalyse_Test_Salome.ipynb  Datenanalyse_Test_Salome_V2.0.ipynb  Datenanalyse_Test_Selina.ipynb  Datenanalyse_ÖV_250222.ipynb  Datensatz_Wetter_Sarah_Fässleripynb.ipynb  Demo_MyFirst_Notebook_Selina.ipynb  Kopie_von_Analyse_von_Theresa.ipynb  MSc_WI_BINA_Erstes_Projekt_RF.ipynb  Meine_erste_Übung_hochgeladen.ipynb  README.md  Seaborn.ipynb  pyproject.toml
Semesterarbeit/: Data_Import.ipynb  Datenanalyse_Wetter.ipynb  Datenanalyse_ÖV.ipynb  Datenanalyse_ÖV_250222.ipynb  Main.ipynb  csv_bereinigung.ipynb
Semesterarbeit/Main/: Datenanasyse 2b)-2.ipynb  Dokumentation.ipynb  README.md  VBZ Haltestellen.html  kepler_config.json
Semesterarbeit/Spielwiese/Donat/: Datenanalyse_ÖV.ipynb  Kepler_Map.ipynb  Wetter.ipynb  haltepunkt.csv  haltestelle.csv
Semesterarbeit/Spielwiese/Remo/: Betriebspunkt.csv  Datenanalyse_ÖV_250222.ipynb  Datenimport.ipynb  Karte.ipynb  zuerich_stationen.html
Semesterarbeit/Verkehrsdaten/: Cook_Book_Betriebspunkte.txt  Cook_Book_Verkehrsdaten.txt
Semesterarbeit/Version_Donat/: Datenanalyse_ÖV.ipynb  Wetter.ipynb  Wetter_Zurich_Schnee_Nebel_Hagel.csv
Semesterarbeit/Wetter_Zürich_stündlich/: order_128758_data.csv
Semesterarbeit/Wetterdaten/: Legende_Wetterdatensatz1.txt
Übungen/: README.md
Übungen/LB1/: Demo_MyFirst_Notebook.ipynb  MSc_WI_BINA_Erstes_Projekt_RF.ipynb  Mein_erstes_Projekt_RF.ipynb
Übungen/LB2/: 3Projekt.ipynb  Übung_03_RF.ipynb
(+5 files in other folders)
