[project]
name = "msc-wi-bina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "calplot>=0.1.7.5",
    "ipykernel>=6.29.5",
    "keplergl>=0.3.7",
    "matplotlib>=3.10.1",
    "nbqa>=1.9.1",
    "nbstripout>=0.8.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pyproj>=3.7.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
